Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>This blog is meant to capture all of the interesting experiences I had throughout flatiron, involving projects and other challenges.</p>
